<resources>
    <string name="app_name">CS 273 Superheroes</string>
    <string name="action_settings">Settings</string>
    <string name="number_of_choices">Quiz Type</string>
    <string name="number_of_choices_description">Display 2, 4, 6, or 8 guess buttons</string>
    <string name="superhero_names">Names</string>
    <string name="superhero_names_description">Superheroes to include in the quiz</string>
    <string name="guess_superhero">Guess the Superhero</string>
    <string name="guess">Guess the %1$s</string>
    <string name="results">%1$d guesses, %2$.01f%% correct</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="default_superhero_message">Something must be selected. Setting names as the default choice.</string>
    <string name="restarting_quiz">Quiz will restart with your new settings</string>
    <string name="question">Question %1$d of %2$d</string>
    <string name="reset_quiz">Reset Quiz</string>
    <string name="default_superhero">Superhero_Name</string>
    <string name="title_activity_settings">Settings</string>
    <string name="quiz_types">Quiz Types</string>
    <string name="quiz_types_descriptions">Choose superhero name, superpower, or one thing about them</string>
    <string name="name_type">Superhero Name</string>
    <string name="power_type">Superpower</string>
    <string name="one_thing_type">One Thing</string>
    <string name="pref_default">@string/name_type</string>
    <string name="pref_key">pref_quiz_type</string>
    <string name="image_description">Image of the current superhero in the quiz</string>

</resources>
