<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:entries="@array/guesses_list"
        android:entryValues="@array/guesses_list"
        android:key="pref_numberOfChoices"
        android:title="@string/number_of_choices"
        android:summary="@string/number_of_choices_description"
        android:persistent="true"
        android:defaultValue="4"
        />

    <ListPreference
        android:entries="@array/quiz_types_list"
        android:entryValues="@array/quiz_types_list"
        android:key="pref_powers"
        android:title="@string/quiz_types"
        android:summary="@string/quiz_types_descriptions"
        android:persistent="true"
        android:defaultValue="@string/pref_default"
        />



</PreferenceScreen>