<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/superheroLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.bwegener.cs273superheroes.SettingsActivity">

    <TextView
        android:id="@+id/questionNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/question"
        android:layout_marginBottom="@dimen/spacing"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <ImageView
        android:id="@+id/superheroImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/spacing"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_description"
        android:elevation="50dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_superhero"/>

    <TextView
        android:id="@+id/guessTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/guess_superhero"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <LinearLayout
        android:id="@+id/row1LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="2"
            android:onClick="makeGuess"
            android:text="Choice"/>

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="2"
            android:onClick="makeGuess"
            android:text="Choice"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="2"
            android:onClick="makeGuess"
            android:text="Choice"/>

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="2"
            android:onClick="makeGuess"
            android:text="Choice"/>
    </LinearLayout>

    <TextView
        android:id="@+id/answerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:gravity="center_horizontal"
        android:text="Medium Text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="@dimen/answer_size"
        android:textStyle="bold"/>

</LinearLayout>
